--- a/views/user/product.ejs
+++ b/views/user/product.ejs
@@ -1,154 +1,158 @@
 <%- include('../partials/user/header.ejs') %>
 
-    <div class="wrapper">
-        <div class="sidebar">
-            <h3>Search</h3>
-            <input id="search" placeholder="Search products..." type="text" onkeydown="handleKeyDown(event)" />
-            <button onclick="applyFilters()">
-                <i class="fas fa-search">Search</i>
-            </button>
+<div class="wrapper">
+    <div class="sidebar">
+        <h3>Search</h3>
+        <input id="search" placeholder="Search products..." type="text" onkeydown="handleKeyDown(event)" />
+        <button onclick="applyFilters()">
+            <i class="fas fa-search">Search</i>
+        </button>
 
-            <div class="price-filter">
-                <h3>Filter by Price</h3>
-                <div id="priceSlider"></div>
-                <div>
-                    <span>Selected Price Range: ₹<span id="selectedPriceRange">20 - 100,000</span></span>
-                </div>
-                <button onclick="applyFilters()">APPLY</button>
+        <div class="price-filter">
+            <h3>Filter by Price</h3>
+            <div id="priceSlider"></div>
+            <div>
+                <span>Selected Price Range: ₹<span id="selectedPriceRange">20 - 100,000</span></span>
             </div>
-
-            <div class="out-of-stock-filter">
-                <label>
-                    <input type="checkbox" id="showOutOfStock" onchange="applyFilters()" <% if (showOutOfStock==="true"
-                        ) { %> checked <% } %> >
-                        Show Out of Stock Products
-                </label>
-            </div>
-
-            <div class="category-filter">
-                <h3>Filter by Category:</h3>
-                <select id="category" onchange="applyFilters()">
-                    <option value="">All Categories</option>
-                    <% categories.forEach(category=> { %>
-                        <option value="<%= category._id %>" <%=selectedCategory===category._id.toString() ? "selected"
-                            : "" %>>
-                            <%= category.name %>
-                        </option>
-                        <% }); %>
-                </select>
-            </div>
-
-            <div class="sorting-options">
-                <h3>Sort by:</h3>
-                <select id="sortBy" onchange="applyFilters()">
-                    <option value="popularity" <%=sortBy==="popularity" ? "selected" : "" %>>Popularity</option>
-                    <option value="priceLowToHigh" <%=sortBy==="priceLowToHigh" ? "selected" : "" %>>Price: Low to High
-                    </option>
-                    <option value="priceHighToLow" <%=sortBy==="priceHighToLow" ? "selected" : "" %>>Price: High to Low
-                    </option>
-                    <option value="averageRating" <%=sortBy==="averageRating" ? "selected" : "" %>>Average Ratings
-                    </option>
-                    <option value="featured" <%=sortBy==="featured" ? "selected" : "" %>>Featured</option>
-                    <option value="newArrivals" <%=sortBy==="newArrivals" ? "selected" : "" %>>New Arrivals</option>
-                    <option value="aToZ" <%=sortBy==="aToZ" ? "selected" : "" %>>A - Z</option>
-                    <option value="zToA" <%=sortBy==="zToA" ? "selected" : "" %>>Z - A</option>
-                </select>
-            </div>
+            <button onclick="applyFilters()">APPLY</button>
         </div>
 
-        <div class="content-product">
-            <div class="breadcrumbs">
-                <a href="/">Home</a>
-                <span>/</span>
-                <a href="#">Products</a>
-            </div>
-            <h1>Products</h1>
-            <p>Showing all <%= count %> results</p>
-            <div class="products">
-                <% products.forEach(product=> { %>
-                    <a href="/product-detail?id=<%= product._id %>">
-                        <div class="product">
-                            <img alt="<%= product.productName %>" height="300"
-                                src="uploads/product-images/<%= product.image[0] %>" width="300" />
-                            <h3>
-                                <%= product.productName %>
-                            </h3>
-                            <h6>
-                                <%= product.brand.brandName %>
-                            </h6>
-                            <p>
-                                <%= product.category.name %>
-                            </p>
-                            <p>₹<%= product.price.toFixed(2) %>
-                            </p>
-                            <p>Rating: <span class="stars">
-                                    <%= '★' .repeat(Math.round(product.rating)) %>
-                                </span> (<%= product.rating.toFixed(1) %>)</p>
-                            <p>Status: <%= product.quantity> 0 ? 'Available' : 'Out of Stock' %></p>
-                            <strong>Stock left : </strong>
-                            <%= product.quantity %>
-                        </div>
-                    </a>
-                    <% }); %>
-            </div>
+        <div class="out-of-stock-filter">
+            <label>
+                <input type="checkbox" id="showOutOfStock" onchange="applyFilters()" <% if (showOutOfStock==="true") { %> checked <% } %> >
+                Show Out of Stock Products
+            </label>
+        </div>
+
+        <div class="category-filter">
+            <h3>Filter by Category:</h3>
+            <select id="category" onchange="applyFilters()">
+                <option value="">All Categories</option>
+                <% categories.forEach(category => { %>
+                    <option value="<%= category._id %>" <%= selectedCategory === category._id.toString() ? "selected" : "" %>>
+                        <%= category.name %>
+                    </option>
+                <% }); %>
+            </select>
+        </div>
+
+        <div class="sorting-options">
+            <h3>Sort by:</h3>
+            <select id="sortBy" onchange="applyFilters()">
+                <option value="popularity" <%= sortBy === "popularity" ? "selected" : "" %>>Popularity</option>
+                <option value="priceLowToHigh" <%= sortBy === "priceLowToHigh" ? "selected" : "" %>>Price: Low to High</option>
+                <option value="priceHighToLow" <%= sortBy === "priceHighToLow" ? "selected" : "" %>>Price: High to Low</option>
+                <option value="averageRating" <%= sortBy === "averageRating" ? "selected" : "" %>>Average Ratings</option>
+                <option value="featured" <%= sortBy === "featured" ? "selected" : "" %>>Featured</option>
+                <option value="newArrivals" <%= sortBy === "newArrivals" ? "selected" : "" %>>New Arrivals</option>
+                <option value="aToZ" <%= sortBy === "aToZ" ? "selected" : "" %>>A - Z</option>
+                <option value="zToA" <%= sortBy === "zToA" ? "selected" : "" %>>Z - A</option>
+            </select>
         </div>
     </div>
 
-    <%- include('../partials/user/footer.ejs') %>
+    <div class="content-product">
+        <div class="breadcrumbs">
+            <a href="/">Home</a>
+            <span>/</span>
+            <a href="#">Products</a>
+        </div>
+        <h1>Products</h1>
+        <p>Showing all <%= count %> results</p>
+        <div class="products">
+            <% products.forEach(product => { %>
+                <a href="/product-detail?id=<%= product._id %>">
+                    <div class="product">
+                        <img alt="<%= product.productName %>" height="300" src="uploads/product-images/<%= product.image[0] %>" width="300" />
+                        <h3><%= product.productName %></h3>
+                        <h6><%= product.brand.brandName %></h6>
+                        <p><%= product.category.name %></p>
+                        <p>
+                            <% if (product.bestOffer) { %>
+                                <span class="original-price" style="text-decoration: line-through;">₹<%= product.price.toFixed(2) %></span>
+                                <span class="discounted-price" style="color: red;">₹<%= (product.price - product.bestOffer.effectiveDiscount).toFixed(2) %></span>
+                                <p class="discount-info">You save: ₹<%= product.bestOffer.effectiveDiscount.toFixed(2) %></p>
+                            <% } else { %>
+                                <span class="discounted-price">₹<%= product.price.toFixed(2) %></span>
+                            <% } %>
+                        </p>
+                        <p>Status: <%= product.quantity > 0 ? 'Available' : 'Out of Stock' %></p>
+                        <strong>Stock left: </strong><%= product.quantity %>
+                    </div>
+                </a>
+            <% }); %>
+        </div>
+        <div class="pagination">
+            <% if (currentPage > 1) { %>
+                <a href="/products?page=<%= currentPage - 1 %>&sortBy=<%= sortBy %>&showOutOfStock=<%= showOutOfStock %>&category=<%= selectedCategory %>&minPrice=<%= minPrice %>&maxPrice=<%= maxPrice %>">Previous</a>
+            <% } %>
+            
+            <% for (let i = 1; i <= totalPages; i++) { %>
+                <a href="/products?page=<%= i %>&sortBy=<%= sortBy %>&showOutOfStock=<%= showOutOfStock %>&category=<%= selectedCategory %>&minPrice=<%= minPrice %>&maxPrice=<%= maxPrice %>" class="<%= i === currentPage ? 'active' : '' %>"><%= i %></a>
+            <% } %>
+            
+            <% if (currentPage < totalPages) { %>
+                <a href="/products?page=<%= parseInt(currentPage) + 1 %>&sortBy=<%= sortBy %>&showOutOfStock=<%= showOutOfStock %>&category=<%= selectedCategory %>&minPrice=<%= minPrice %>&maxPrice=<%= maxPrice %>">Next</a>
+            <% } %>
+        </div>
+    </div>
+</div>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.3/nouislider.min.js"></script>
-        <script>
+<%- include('../partials/user/footer.ejs') %>
 
-            const priceSlider = document.getElementById('priceSlider');
-            const selectedPriceRange = document.getElementById('selectedPriceRange');
+<script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.3/nouislider.min.js"></script>
+<script>
+    const priceSlider = document.getElementById('priceSlider');
+    const selectedPriceRange = document.getElementById('selectedPriceRange');
 
-            const minPrice = <%= minPrice %>;
-            const maxPrice = <%= maxPrice %>;
+    const minPrice = <%= minPrice %>;
+    const maxPrice = <%= maxPrice %>;
 
-            noUiSlider.create(priceSlider, {
-                start: [minPrice, maxPrice],
-                connect: true,
-                range: {
-                    'min': 20,
-                    'max': 100000
-                }
-            });
+    noUiSlider.create(priceSlider, {
+        start: [minPrice, maxPrice],
+        connect: true,
+        range: {
+            'min': 20,
+            'max': 100000
+        }
+    });
 
-            priceSlider.noUiSlider.on('update', function (values) {
-                selectedPriceRange.innerHTML = Math.round(values[0]) + ' - ' + Math.round(values[1]);
-            });
+    priceSlider.noUiSlider.on('update', function (values) {
+        selectedPriceRange.innerHTML = Math.round(values[0]) + ' - ' + Math.round(values[1]);
+    });
 
-            priceSlider.noUiSlider.set([minPrice, maxPrice]);
-            selectedPriceRange.innerHTML = minPrice + ' - ' + maxPrice; 
-            function handleKeyDown(event) {
-                if (event.key === 'Enter') {
-                    applyFilters();
-                }
-            }
+    priceSlider.noUiSlider.set([minPrice, maxPrice]);
+    selectedPriceRange.innerHTML = minPrice + ' - ' + maxPrice; 
 
-            function applyFilters() {
-                const searchQuery = document.getElementById("search").value;
-                const sortBy = document.getElementById("sortBy").value;
-                const showOutOfStock = document.getElementById("showOutOfStock").checked;
-                const category = document.getElementById("category").value;
+    function handleKeyDown(event) {
+        if (event.key === 'Enter') {
+            applyFilters();
+        }
+    }
 
-                const priceValues = priceSlider.noUiSlider.get();
-                const minPrice = Math.round(priceValues[0]);
-                const maxPrice = Math.round(priceValues[1]);
+    function applyFilters() {
+        const searchQuery = document.getElementById("search").value;
+        const sortBy = document.getElementById("sortBy").value;
+        const showOutOfStock = document.getElementById("showOutOfStock").checked;
+        const category = document.getElementById("category").value;
 
-                const queryParams = new URLSearchParams();
-                if (searchQuery) queryParams.append("search", searchQuery);
-                if (sortBy) queryParams.append("sortBy", sortBy);
-                if (showOutOfStock) {
-                    queryParams.append("showOutOfStock", "true");
-                } else {
-                    queryParams.append("showOutOfStock", "false");
-                }
-                if (category) queryParams.append("category", category);
+        const priceValues = priceSlider.noUiSlider.get();
+        const minPrice = Math.round(priceValues[0]);
+        const maxPrice = Math.round(priceValues[1]);
 
-                queryParams.append("minPrice", minPrice);
-                queryParams.append("maxPrice", maxPrice);
+        const queryParams = new URLSearchParams();
+        if (searchQuery) queryParams.append("search", searchQuery);
+        if (sortBy) queryParams.append("sortBy", sortBy);
+        if (showOutOfStock) {
+            queryParams.append("showOutOfStock", "true");
+        } else {
+            queryParams.append("showOutOfStock", "false");
+        }
+        if (category) queryParams.append("category", category);
 
-                window.location.href = `/products?${queryParams.toString()}`;
-            }
-        </script>
+        queryParams.append("minPrice", minPrice);
+        queryParams.append("maxPrice", maxPrice);
+
+        window.location.href = `/products?${queryParams.toString()}`;
+    }
+</script>
